--- a/requirements.txt
+++ b/requirements.txt
@@ -84,7 +84,7 @@ inflection==0.5.1
 intervaltree @ file:///tmp/build/80754af9/intervaltree_1594361675072/work
 ipykernel @ file:///C:/ci/ipykernel_1594745408489/work/dist/ipykernel-5.3.2-py3-none-any.whl
 ipython @ file:///C:/ci/ipython_1593447482397/work
-ipython-genutils==0.2.0
+ipython_genutils==0.2.0
 ipywidgets==7.5.1
 isort==4.3.21
 itsdangerous==1.1.0
@@ -208,7 +208,7 @@ requests-oauthlib==1.3.0
 rope==0.17.0
 rsa==4.7.2
 Rtree @ file:///C:/ci/rtree_1618421009405/work
-ruamel-yaml==0.15.87
+ruamel_yaml==0.15.87
 scikit-image==0.16.2
 scikit-learn @ file:///C:/ci/scikit-learn_1592853510272/work
 scipy @ file:///C:/ci/scipy_1592916963468/work
